@@ -1,4 +1,5 @@
 0.8-2
+- geodDist(): add argument 'alongPath'
 - remove compilation warning about doc for summary.ctd()
 0.8-1
 - switch to S4 classes, and add new accessors and 'show' functions.
